# fuck-pdf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 버그-리포트.md  새로운-기능-추가.md
app/: delete_pdf_page.py  main.py  merge_pdf_page.py  odd_even_merge_page.py  rotate_pdf_page.py
